akaunting/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: akaunting
spec:
  ports:
    - name: web
      targetPort: web
      port: 8080
      protocol: TCP
  type: ClusterIP
